@@ -1,5 +1,0 @@
-TRE_PATH=/home/pixel/Desktop/git/tre/tre/
-TRE_DEBUG=1
-TRE_DEVELOPMENT=1
-TRE_ASSERT=1
-TRE_ASSERT_CL=1
